[SYNCOPE-1895] Passing the current FIQL to the CSV Push service